--- a/po/zh-cn/poweroff.po
+++ b/po/zh-cn/poweroff.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.2.4\n"
-"Last-Translator: eSirPlayground <https://www.youtube.com/c/esirplayground>\n"
+"Last-Translator: \n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "Language: zh_CN\n"
 
@@ -16,16 +16,16 @@ msgid "PowerOff"
 msgstr "关机"
 
 msgid "Shut down your router"
-msgstr "吹灯拔蜡，关机回家"
+msgstr "关闭您设备上的系统"
 
 msgid "Perform PowerOff"
-msgstr "关机，走你~"
+msgstr "执行关机"
 
 msgid "Warning: There are unsaved changes that will get lost on shutting down!"
-msgstr "警告：没保存的改动在关机的时候都会丢失！别惊讶，要么保存，要么放弃"
+msgstr "警告：未保存的更改会在关机时丢失！"
 
 msgid "Waiting for device..."
-msgstr "设备有点懵，要等一下..."
+msgstr "正在等待设备..."
 
 msgid "Router is shutting down..."
-msgstr "正在关机，说啥也不好使了..."
+msgstr "正在关机..."
